--- a/GamersIntel-Client/src/index.css
+++ b/GamersIntel-Client/src/index.css
@@ -1,4 +1,32 @@
+@import url('https://fonts.googleapis.com/css2?family=Bitcount+Single:wght@100..900&family=Creepster&family=Galdeano&family=Poetsen+One&display=swap');
 @import "tailwindcss";
  @plugin "daisyui" {
    themes: synthwave --default;
  }
+ .galdeano-regular {
+  font-family: "Galdeano", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+.poetsen-one-regular {
+  font-family: "Poetsen One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+.creepster-regular {
+  font-family: "Creepster", system-ui;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.bitcount-single {
+  font-family: "Bitcount Single", system-ui;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  font-variation-settings:
+    "slnt" 0,
+    "CRSV" 0.5,
+    "ELSH" 0,
+    "ELXP" 0;
+}
